--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Finance-Currency-Convert-GMC
 
-0.001   2016-10-14 (PERLANCAR) (unreleased)
+0.001   2016-10-14 (PERLANCAR)
 
         - First release.
