--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004   2018-06-17 (PERLANCAR)
+
+	- Extract last update information from the website.
+
+
 0.003   2017-07-10 (PERLANCAR)
 
 	- No functional changes.
