--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.006   2018-07-10 (PERLANCAR)
+
+	- Add prereq to IO::Socket::SSL 2.009 [CT].
+
+
 0.005   2018-06-24 (PERLANCAR)
 
 	- Mojo's error doesn't give code, only message.
